--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Document</title>
 </head>
 <body>
-  <header></header>
+  <header>欢迎访问项目</header>
   <section></section>
   <footer></footer>
 </body>
